--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -24,9 +24,10 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.css"
-            ],
+             "styles": [
+            "node_modules/primeicons/primeicons.css",
+            "src/styles.css"
+          ],
             "scripts": []
           },
           "configurations": {
